[gd_scene load_steps=6 format=3 uid="uid://0i7gy454unrd"]

[ext_resource type="Script" path="res://Enemies/Boss2/Boss_fase_2.gd" id="1_v5h0h"]
[ext_resource type="Texture2D" uid="uid://dqx15a8jbscmt" path="res://Style/Images/Enemys/Boss_2.png" id="2_5d6y0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ldmar"]
atlas = ExtResource("2_5d6y0")
region = Rect2(0, 0, 34, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kjub"]
atlas = ExtResource("2_5d6y0")
region = Rect2(34, 0, 34, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_hmyhb"]
animations = [{
"frames": [{
"duration": 25.0,
"texture": SubResource("AtlasTexture_ldmar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kjub")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_v5h0h")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6, 4)
scale = Vector2(1.644, 1.5)
sprite_frames = SubResource("SpriteFrames_hmyhb")
autoplay = "default"
frame_progress = 0.882533

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(33, 4)
scale = Vector2(1.6, 1.46)
polygon = PackedVector2Array(0, 5.33333, -7.29927, 14.6667, -15.8151, 16, -26.764, 14.6667, -30.4136, 10, -31.0219, 8, -32.2384, 4.66667, -25.5474, -2.66667, -27.9805, -4, -31.6302, -4, -33.455, -5.33333, -33.455, -8.66667, -29.1971, -11.3333, -27.3723, -14.6667, -24.3309, -16.6667, -19.4647, -16, -16.4234, -12.6667, -15.2068, -10, -15.8151, -6, -17.6399, -0.666667, -12.1655, -0.666667, -6.691, 1.33333, -4.25791, 2.66667, -1.82482, 3.33333)

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2(34, 4)
scale = Vector2(1.644, 1.5)
polygon = PackedVector2Array(0, 5.33333, -7.29927, 14.6667, -15.8151, 16, -26.764, 14.6667, -30.4136, 10, -31.0219, 8, -32.2384, 4.66667, -25.5474, -2.66667, -27.9805, -4, -31.6302, -4, -33.455, -5.33333, -33.455, -8.66667, -29.1971, -11.3333, -27.3723, -14.6667, -24.3309, -16.6667, -19.4647, -16, -16.4234, -12.6667, -15.2068, -10, -15.8151, -6, -17.6399, -0.666667, -12.1655, -0.666667, -6.691, 1.33333, -4.25791, 2.66667, -1.82482, 3.33333)

[node name="BulletPoint1" type="Node2D" parent="."]
position = Vector2(-16, 40)

[node name="BulletPoint2" type="Node2D" parent="."]
position = Vector2(24, 40)

[node name="BulletPoint3" type="Node2D" parent="."]
position = Vector2(4, 40)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
